--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
+    "filesaver": "0.0.13",
+    "jszip": "^3.5.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.2",
     "vue-moveable": "^1.8.10",
